--- a/client/src/components/Auth/CompleteRegistration/FormComponent/FormComponent.module.css
+++ b/client/src/components/Auth/CompleteRegistration/FormComponent/FormComponent.module.css
@@ -8,6 +8,44 @@
     color: #fff; /* White text */
 }
 
+.labelUsername {
+    position: relative;
+
+}
+
+.resultUsername {
+    position: absolute;
+    top: -17px;
+    right: 15px;
+}
+
+.userCheckBlock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 17px;
+}
+
+.taken {
+    color: #FF6565;
+    text-align: center;
+    font-family: Onest, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 145%;
+}
+
+.free {
+    color: #AAFFAD;
+    text-align: right;
+    font-family: Onest, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 145%;
+}
+
 .inputField {
     border: 1px solid #ccc;
     color: #fff;
@@ -39,7 +77,7 @@
     display: flex;
     align-items: center;
     cursor: pointer;
-    width: 225px;
+    width: 222px;
     height: 34px;
     align-self: stretch;
     border-radius: 20px;
@@ -61,7 +99,7 @@
     position: absolute;
     width: 34px;
     height: 34px;
-
+    margin-bottom: 3px;
     border: 1px solid rgba(233, 233, 233, 0.05);
     background: rgba(233, 233, 233, 0.05);
     border-radius: 18px;
@@ -75,9 +113,14 @@
     content: url('../../../../../public/settings/check.svg');
     background: #AAFFAD;
 }
-.active{
+
+.active {
     border: 1px solid #AAFFAD !important;
     color: #AAFFAD !important;
+}
+.wrong{
+    border: 1px solid #FF6565 !important;
+    color: #FF6565 !important;
 }
 
 .genderButton input[type="radio"]:checked + span {
@@ -88,7 +131,8 @@
     margin-left: 50px;
     transition: color 0.3s ease;
 }
-.checkboxIcon{
+
+.checkboxIcon {
     z-index: 88;
     width: 20px;
     height: 20px;
@@ -98,6 +142,7 @@
     margin-right: 10px;
     transition: background-color 0.3s;
 }
+
 .checkboxIcon::after {
     content: '\2714';
     display: block;
@@ -108,6 +153,7 @@
     border-radius: 50%;
     transition: background-color 0.3s;
 }
+
 .dateField {
     width: 492px;
     height: 66px;
@@ -125,20 +171,28 @@
     padding-left: 18px;
     padding-right: 18px;
 }
-.check{
+
+.check {
     background: #FFFFFF;
 }
-.continue{
-    margin: 50px auto;
+.nextButtons{
+    margin: 40px auto;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 0px !important;
+}
+.nextButtons button{
+    width: 250px;
+    height: 56px;
     margin-bottom: 0px;
     display: flex;
     justify-content: center;
-    width: 280px;
-    height: 56px;
+
     padding: 15px 20px 17px 20px;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+
     flex-shrink: 0;
     border-radius: 18px;
     background: #FFF;
@@ -152,6 +206,12 @@
     cursor: pointer;
     border: none;
 }
+.disableButton{
+    border: 1px solid rgba(255, 255, 255, 0.10) !important;
+    background: transparent !important;
+    color: white !important;
+}
+
 input[type="date"]::-webkit-calendar-picker-indicator {
     filter: invert(1) opacity(0.6);
     font-size: 24px;
