--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,9 @@
         animation: App-logo-spin infinite 20s linear;
     }
 }
-
+.afterlife-back{
+    background: linear-gradient(202deg, #0C1826 0%, #000 38.5%);
+}
 .App-header {
     background-color: #282c34;
     min-height: 100vh;
@@ -160,11 +162,12 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .dropdown {
     position: absolute;
     top: 115%;
-    width: 300px;
+    width: 16.25rem;
+    height: 20.1875rem;
     right: 25%;
-    background-color: #141414;
-
-    border-radius: 18px;
+    border-radius: 1.5rem;
+    background: rgba(4, 5, 6, 0.60);
+    backdrop-filter: blur(9px);
     padding: 1rem;
     overflow: hidden;
     transition: height var(--speed) ease;
@@ -242,7 +245,40 @@ Note: Beware of modifying this element as it can break the animations - you shou
     transform-origin: center;
     border-radius: 5px;
 }
+.menu-item__header{
+    display: flex;
+}
+.menu-item__header img{
+    width: 3.125rem;
+    height: 3.125rem;
+    flex-shrink: 0;
 
+    border-radius: 3.5625rem;
+
+    box-shadow: 0 0 8px 4px rgba(208, 164, 196, 0.35);
+}
+.menu-item__underheader{
+    display: flex;
+    flex-direction: column;
+}
+.menu-item__name{
+    color: #D9D9D9 !important;
+    font-family: Onest, sans-serif;
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 135%; /* 1.51875rem */
+    padding: 0;
+}
+.menu-item__undername{
+    padding: 0;
+    color: rgba(255, 255, 255, 0.50) !important;
+    font-family: Onest, sans-serif;
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 135%; /* 1.18125rem */
+}
 .icon-right {
     margin-left: auto;
 }
@@ -418,12 +454,21 @@ body {
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 105px;
-    height: 50px;
-    background: #0f202b;
-    border-radius: 12px;
-    right: 12%;
+    width: 7.5vw;
+    height: 2.8vw;
+    /*background: #0f202b;*/
+    background: transparent;
+
     cursor: pointer !important;
+
+    border-radius: 1em;
+    border: 1px solid rgba(233, 233, 233, 0.05);
+    backdrop-filter: blur(10px);
+
+}
+.profile:hover{
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    transition: all 0.3s ease;
 }
 
 .profileBlack {
@@ -504,7 +549,8 @@ body {
 .nav {
     position: relative;
     width: 100%;
-    height: 100px;
+    /*height: clamp(100px, 6.5vw, 125px);*/
+    height: 6.5vw;
     display: flex;
     align-items: center;
 
@@ -518,7 +564,7 @@ body {
 .navBlack {
     position: relative;
     width: 100%;
-    height: 100px;
+    /*height: clamp(5vw, 6.5vw, 6.5vw);*/
     display: flex;
     justify-content: center;
     align-items: center;
