--- a/client/src/pages/Main/HeaderHomePage/HeaderHomePage.module.css
+++ b/client/src/pages/Main/HeaderHomePage/HeaderHomePage.module.css
@@ -1,103 +1,103 @@
 .header {
     padding-top: 10px;
-    height: 84vh;
+    height: calc(100vh - 5.5vw);
+    width: 100%;
     /*background-image: url("../../../../public/home-background.png");*/
-    border-radius: 32px;
+    background: url("../../../../public/home/background.jpg") center;
+    background-size: cover;
     color: white;
     font-family: 'Nunito', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-}
-
-.title {
-    font-size: 48px;
-    margin-left: 5%;
-    font-weight: bold;
-}
-
-
-.content {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    margin: auto 0;
-}
-
-
-.greetings{
-    display: flex;
-    height: 85%;
-    align-items: center;
-    justify-content: center;
-}
-.greetings h1{
-    font-weight: 600;
-    font-size: 60px;
-    text-align: left;
-    max-width: 700px;
-
-}
-.cardPosition {
-    display: flex;
-
-}
-.logo{
-    font-family: 'dymaxon', sans-serif;
-    font-weight: normal;
-}
-
-
-/*Card*/
-
-.card {
     position: relative;
-    border-radius: 12px;
-    background: rgba(255, 255, 255, 0.1);
-    margin: 2% 4%;
-    color: white;
+    border-radius: 2rem;
 }
 
-.cardImg {
-    height: 230px;
-    border-radius: 12px;
+.headerContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
 }
 
-.name {
-    font-size: 22px;
-    margin: 5px 0 3px 10px;
-
+.headMessage {
+    text-align: center;
+    font-family: "Montserrat", serif;
+    font-size: 3.33vw;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 100%; /* 64px */
+    font-feature-settings: "ss01";
+    -webkit-font-feature-settings: "ss01";
+    -moz-font-feature-settings: "ss01";
+    -ms-font-feature-settings: "ss01";
+    -o-font-feature-settings: "ss01";
+    margin: 0;
+    padding: 0;
+    margin-top: 3vw;
 }
 
-.desc {
-    margin: 0 0 10px 10px;
-    font-size: 14px;
+.underHeadMessage {
+    margin: 0;
+    padding: 0;
+    margin-top: 1em;
+    text-align: center;
 
+    /* Text & Caption */
+    font-family: Onest, sans-serif;
+    font-size: 0.83vw;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
-.section{
+
+.playButton {
+    display: inline-flex;
+    width: 6.05vw;
+    height: 2.7vw;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
+    flex-shrink: 0;
+    border-radius: 1rem;
+    border: 1px solid rgba(233, 233, 233, 0.05);
+    background: rgba(255, 255, 255, 0.10);
+    backdrop-filter: blur(8px);
+    margin-top: 2em;
+    font-size: 0.83vw;
+    font-family: Onest, sans-serif;
+    font-weight: 500;
+    line-height: 145%;
+}
+
+.playButton img{
+    width: 0.83vw;
+}
+.left {
     position: absolute;
-    height: 26px;
-    border-radius: 12px;
-    /* Note: currently only Safari supports backdrop-filter */
-    backdrop-filter: blur(30px);
-    --webkit-backdrop-filter: blur(30px);
-    background-color: rgba(255, 255, 255, 0.15);
-    display: inline-block;
-    /*padding: 2px 5px 5px;*/
+    left: 33.5%;
+    top: 43.5%;
+    width: 5.1vw;
+    height: 3vw;
+    backdrop-filter: blur(10px);
+    margin: 0;
+    padding: 0  ;
+    border-radius: 1.2rem;
+    transform: rotate(10deg);
+}
 
-    bottom: 100px;
-    left: 10px;
-    padding-bottom: 8px;
+.right {
+    position: absolute;
+    right: 32.5%;
+    top: 38%;
+    width: 5.1vw;
+    height: 3vw;
+    backdrop-filter: blur(10px);
+    margin: 0;
+    padding: 0  ;
+    border-radius: 1.2rem;
+    transform: rotate(-10deg);
+}
 
-}
-.section img{
-    width: 25px;
-    padding: 5px;
-}
-.firstCard{
-margin-bottom: 100px;
-}
-.secondCard{
-margin-top: 100px;
-}
