--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,96 +1,116 @@
 .card {
+    width: 14.6vw;
+    height: 21.88vw;
+
+    border-radius: 1.125rem;
+    box-shadow: 0 7px 10px 0 rgba(0, 0, 0, 0.45);
     position: relative;
-    border-radius: 12px;
-    color: white;
-    cursor: pointer;
-    border: 0.5px solid transparent;
-    border-image: linear-gradient(to top, rgb(130, 159, 202), rgba(255, 255, 255, 0)) 1;
-}
-.borderLeft{
 
 }
-
 
 .cardImg {
-    width: 280px;
-    height: 371.392px;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    border-radius: 1.125rem;
+    position: relative;
+}
 
+.bottom {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    bottom: 1%;
+    margin-left: 1rem;
+    gap: 0.3rem;
+}
+
+.top {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 0;
+    right: 0;
+    margin-top: 0.88rem;
+    margin-right: 1.12rem;
+    gap: 0.25rem;
+}
+
+.matchPerc {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3.22vw;
+    height: 1.97vw;
+    gap: 0.125rem;
+    border-radius: 0.75rem;
+    background: rgba(233, 233, 233, 0.05);
+    backdrop-filter: blur(24px);
+    margin-top: 3px;
+
+}
+.matchPerc img{
+    width: 1.15vw;
 }
 
 .name {
     color: #FFF;
-    font-family: "Nunito Sans", sans-serif;
-    font-size: 32px;
-    /*margin: 5px 0 3px 10px;*/
-}
-.desc {
-    color: #FFF;
-    font-family: "Nunito Sans", sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 0.8px;
-    text-transform: lowercase;
     text-align: center;
-
+    font-family: Montserrat, sans-serif;
+    font-size: 1.88vw !important;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 145%;
+    text-transform: capitalize;
+    margin: 0;
 }
 
-.section {
-    position: absolute;
-    height: 26px;
-    border-radius: 12px;
-    /* Note: currently only Safari supports backdrop-filter */
-    display: inline-block;
-    /*padding: 2px 5px 5px;*/
-    bottom: 65px;
-    left: 15px;
-    padding-bottom: 8px;
-
-
+.percNumber {
+    color: #D9D9D9;
+    text-align: center;
+    font-family: Onest, sans-serif;
+    font-size: 0.9375vw !important;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 145%;
+    margin: 0;
 }
 
-.section img {
-    width: 25px;
-    height: 25px;
-    padding: 5px;
-}
-.nameSection{
-    position: absolute;
-    bottom: 70px;
-    left: 15px;
+.gameSection {
     display: flex;
+    height: 1.66vw;
+    justify-content: center;
     align-items: center;
-    gap: 5px;
-
+    gap: 0.3rem;
+    border-radius: 1.125rem;
+    background: rgba(233, 233, 233, 0.05);
+    backdrop-filter: blur(24px);
+    padding: 0 0.5rem 0 0.5rem;
 }
-.rating{
-    width: 35px;
-    height: 31px;
-    border-radius: 8px;
-    background: rgba(20, 20, 20, 0.25);
-    backdrop-filter: blur(4px);
+
+.gameSection img {
+    width: 1.145vw;
+    height: 1.145vw;
+}
+
+.sound {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 1.66vw;
+    height: 1.66vw;
+    border-radius: 1.125rem;
+    background: rgba(233, 233, 233, 0.05);
+    backdrop-filter: blur(24px);
+
 }
-.rating p {
-    text-align: center;
-    font-family: "Nunito Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 700;
-    background: linear-gradient(184deg, #829FCA 3.46%, #FFF 96.97%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+
+.sound img {
+    width: 1.04vw;
+    height: 1.04vw;
+    flex-shrink: 0;
+
 }
-.mask{
-    position: absolute;
-    width: 280px;
-    height: 130px;
-    border-radius: 0 0 10px 10px;
-    background: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.00) 100%);
-    bottom: 55px;
+.verified{
+    width: 1.5625vw;
 }
