--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -122,12 +122,12 @@ a {
 
 .profileLogin {
     display: flex;
-    width: 50px;
-    height: 50px;
+    width: 2.6vw;
+    height: 2.6vw;
     /* background: url(...); */
     border: 1px solid rgba(170, 120, 186, 0.2);
-    filter: drop-shadow(0px 2px 8px #a574b4);
-    border-radius: 50px;
+    /*filter: drop-shadow(0px 2px 8px #a574b4);*/
+    border-radius: 2.6vw;
     cursor: pointer;
     object-fit: cover;
 }
