--- a/client/src/App.css
+++ b/client/src/App.css
@@ -164,13 +164,13 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .dropdown {
     position: absolute;
     top: 115%;
-    width: 16.25rem;
-    height: 20.1875rem;
+    width: 13.54vw;
+    min-height: 16.77vw;
     right: 25%;
     border-radius: 1.5rem;
     background: rgba(4, 5, 6, 0.60);
     backdrop-filter: blur(9px);
-    padding: 1rem;
+
     overflow: hidden;
     transition: height var(--speed) ease;
     z-index: 1000;
@@ -183,7 +183,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 .menu-item__text {
     color: white;
-    font-size: 18px;
+    font-size: 0.9375vw;
     height: 15px;
     display: flex;
     align-items: center;
@@ -193,21 +193,24 @@ Note: Beware of modifying this element as it can break the animations - you shou
     font-family: "Nunito Sans", sans-serif;
     font-weight: 500;
     margin: 0 0 7px 0;
+    justify-content: space-between;
+    padding-left: 1rem;
 }
 
 .menu-item {
     position: relative;
     color: white;
-    font-size: 18px;
+    font-size: 0.9375vw;
     height: 15px;
     display: flex;
     align-items: center;
-    border-radius: var(--border-radius);
+
     transition: background var(--speed);
-    padding: 0.5rem;
+    padding: 0.72vw;
     font-family: "Nunito Sans", sans-serif;
     font-weight: 500;
     margin: 0 0 7px 0;
+    padding-left: 1rem;
 }
 
 .menu-item .icon-button {
@@ -250,11 +253,15 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 .menu-item__header {
     display: flex;
+    gap: 1rem;
+    align-items: center;
+    /*margin-bottom: 1rem;*/
+    padding-left: 1rem;
 }
 
 .menu-item__header img {
-    width: 3.125rem;
-    height: 3.125rem;
+    width: 2.6vw;
+    height: 2.6vw;
     flex-shrink: 0;
 
     border-radius: 3.5625rem;
@@ -270,21 +277,26 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .menu-item__name {
     color: #D9D9D9 !important;
     font-family: Onest, sans-serif;
-    font-size: 1.125rem;
+    font-size: 0.93vw;
     font-style: normal;
     font-weight: 500;
     line-height: 135%; /* 1.51875rem */
     padding: 0;
+    margin-top: 1rem;
 }
 
 .menu-item__undername {
-    padding: 0;
+
     color: rgba(255, 255, 255, 0.50) !important;
     font-family: Onest, sans-serif;
-    font-size: 0.875rem;
+    font-size: 0.8vw;
     font-style: normal;
     font-weight: 400;
     line-height: 135%; /* 1.18125rem */
+
+    border-radius: 1.25rem;
+    border: 1px solid rgba(106, 106, 118, 0.12);
+    padding: 0.4rem 0.5rem;
 }
 
 .icon-right {
@@ -568,6 +580,11 @@ body {
     /*--webkit-backdrop-filter: blur(37px);*/
     /*background-color: rgba(255, 255, 255, 0.02);*/
     /*z-index: 999;*/
+}
+@media screen and (max-width: 1000px) {
+    .nav{
+        height: 5rem;
+    }
 }
 
 .navBlack {
@@ -881,7 +898,7 @@ body {
 
 .faq-section {
     width: 47.9vw;
-    height: 5.3125vw;
+    /*height: 47.13vw;*/
 
     margin: 50px auto;
     padding: 20px;
@@ -953,4 +970,51 @@ body {
 
 .faq-question .arrow.active {
 
+}
+@media screen and (max-width: 1000px) {
+    .faq-section {
+        width: 20rem;
+        /*height: 35rem;*/
+        margin: 0 auto!important;
+        padding: 0 !important;
+
+
+        color: white;
+        border-radius: 10px;
+    }
+
+    .faq-section h2 {
+        font-size: 1.25rem;
+        font-weight: 500;
+    }
+
+    .faq-item {
+        border-radius: 1rem;
+        margin-bottom: 0.63rem;
+        padding: 1rem;
+
+    }
+
+    .faq-question {
+        font-size: 1.25rem;
+        font-weight: 400;
+    }
+
+    .faq-answer {
+        width: 19rem;
+        font-size: 0.7rem;
+        font-weight: 400;
+    }
+
+    .faq-question .arrow {
+        font-size: 18px;
+    }
+    .swiper-button-next,
+    .swiper-button-prev {
+
+        width: 2.5rem !important;
+        height: 2.5rem !important;
+
+        border-radius: 1rem;
+    }
 }
