--- a/client/src/components/Auth/CompleteRegistration/CompleteRegistration.module.css
+++ b/client/src/components/Auth/CompleteRegistration/CompleteRegistration.module.css
@@ -18,7 +18,7 @@
 .content h2 {
     color: #FFF;
     font-family: Onest, sans-serif;
-    font-size: 32px;
+    font-size: 1.66vw;
     font-style: normal;
     font-weight: 700;
     line-height: 145%;
@@ -27,7 +27,7 @@
 .content h2 span {
     color: #79A1DD;
     font-family: Onest, sans-serif;
-    font-size: 36px;
+    font-size: 1.66vw;
     font-style: normal;
     font-weight: 700;
     line-height: 145%;
@@ -39,7 +39,7 @@
     color: #79A1DD;
     text-align: center;
     font-family: Onest, sans-serif;
-    font-size: 24px;
+    font-size: 1.25vw;
     font-style: normal;
     font-weight: 500;
     line-height: 145%; /* 34.8px */
@@ -50,27 +50,27 @@
     justify-content: center;
     position: relative;
     transition: 0.5s all ease;
-    width: 274px;
+    width: 14.27vw;
     margin: 0 auto;
 }
 
 .photoPreview p {
-    font-size: 20px;
+    font-size: 1.04vw;
 }
 
 .photoPreviewImg {
-    width: 242px;
-    height: 242px;
-    border-radius: 137px;
+    width: 12.6vw;
+    height: 12.6vw;
+    border-radius: 7.13vw;
     border: 5px solid rgba(233, 233, 233, 0.05);
     object-fit: cover;
     margin-top: 12.5px;
     transition: 0.5s all ease;
 }
 .photoBorder{
-    width: 274px;
-    height: 274px;
-    border-radius: 137px;
+    width: 14.27vw;
+    height: 14.27vw;
+    border-radius: 7.13vw;
     border: 1px solid rgba(233, 233, 233, 0.05);
     position: absolute;
     top: 0;
@@ -85,11 +85,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     cursor: pointer;
-    min-width: 125px;
+    min-width: 6.51vw;
     transition: 0.5s all ease;
     color: #79A1DD;
     font-family: Onest, sans-serif;
-    font-size: 18px;
+    font-size: 0.9375vw;
     font-style: normal;
     line-height: 145%; /* 26.1px */
     display: flex;
@@ -100,8 +100,8 @@
 
 }
 .labelInputFile img{
-    width: 40px;
-    height: 40px;
+    width: 2.08vw;
+    height: 2.08vw;
 }
 .inputFile {
     display: none;
@@ -122,7 +122,7 @@
     color: #79A1DD;
     text-align: center;
     font-family: Onest, sans-serif;
-    font-size: 21px;
+    font-size: 1.09375vw;
     font-style: normal;
     font-weight: 500;
     line-height: 145%; /* 34.8px */
