--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -114,3 +114,55 @@
 .verified{
     width: 1.5625vw;
 }
+@media screen and (max-width: 1000px) {
+    .card {
+        width: 11.38rem;
+        height: 17.13rem;
+        border-radius: 1.125rem;
+    }
+    .sound {
+        width: 1.375rem;
+        height: 1.375rem;
+    }
+    .sound img {
+        width: 0.70713rem;
+        height: 0.70713rem;
+    }
+    .gameSection {
+        height: 1.38rem;
+        gap: 0.13rem;
+        border-radius: 1.125rem;
+        padding: 0 0.5rem 0 0.5rem;
+    }
+
+    .gameSection img {
+        width: 1.25rem;
+        height: 1.25rem;
+    }
+    .matchPerc {
+        width: 2.9375rem;
+        height: 1.6875rem;
+        gap: 0.125rem;
+        border-radius: 0.625rem;
+
+    }
+    .matchPerc img{
+        width: 0.6875rem;
+        height: 0.6875rem;
+    }
+
+    .name {
+        font-size: 1.25rem !important;
+        font-family: Montserrat, sans-serif !important;
+        font-weight: 600;
+
+    }
+
+    .percNumber {
+        font-size: 1rem !important;
+    }
+    .verified{
+        width: 1.3125rem;
+        height: 1.3125rem;
+    }
+}
