--- a/client/src/pages/Auth/Auth.module.css
+++ b/client/src/pages/Auth/Auth.module.css
@@ -29,12 +29,13 @@
 }
 
 .authForm {
-    width: 360px;
-    padding: 35px 35px 15px;
+
+    /*padding: 35px 35px 15px;*/
+    padding: 1.82vw 1.82vw 0.73vw;
     flex-direction: column;
     align-items: center;
-    gap: 25px;
-    border-radius: 32px;
+    gap: 1.3vw;
+    border-radius: 1.66vw;
     border: 1px solid #000;
     background: rgba(4, 5, 6, 0.65);
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.50);
@@ -59,9 +60,9 @@
     text-align: center;
     color: #fff;
     margin: 0;
-    margin-top: 20px;
+    margin-top: 1.04vw;
     font-family: Onest, serif;
-    font-size: 24px;
+    font-size: 1.25vw;
     font-style: normal;
     font-weight: 500;
     line-height: 145%; /* 34.8px */
@@ -77,8 +78,8 @@
 
 .formInputs {
     width: 100%;
-    margin-top: 30px;
-    gap: 20px;
+    margin-top: 1.5625vw;
+    gap: 1.04vw;
     transition: all 0.3s ease;
 
 }
@@ -90,7 +91,7 @@
     color: #325EB4;
     font-family: Onest, serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 0.83vw;
     top: -1.2ex;
     z-index: 1;
     left: 1.3em;
@@ -105,7 +106,7 @@
     color: #325EB4;
     font-family: Onest, serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 0.83vw;
     background: #16130c;
     top: -1.2ex;
     z-index: 1;
@@ -150,7 +151,7 @@ label {
     font-weight: 400;
     padding-right: 3px;
     padding-left: 3px;
-    font-size: 16px;
+    font-size: 0.83vw;
     background: #1b180f;
     z-index: 1;
     bottom: -0.5em;
@@ -184,7 +185,7 @@ label {
 }
 
 .formRegisterInputs {
-    margin-top: 20px !important;
+    margin-top: 1.04vw !important;
 }
 
 input::placeholder {
@@ -195,14 +196,14 @@ input::placeholder {
 .formInputs input {
     color: white;
     position: relative;
-    margin-top: 15px;
-    border-radius: 20px;
+    margin-top: 0.78125vw;
+    border-radius: 1.04vw;
 
     display: flex;
-    width: 335px;
-    height: 55px;
-    padding-left: 25px;
-    font-size: 18px;
+    width: 17.44vw;
+    height: 2.864vw;
+    padding-left: 1.3vw;
+    font-size: 0.9375vw;
     font-family: Onest, serif;
     background: transparent;
     transition: 0.3s all ease;
@@ -224,56 +225,56 @@ input::placeholder {
 
 .loginButton {
     display: flex;
-    width: 360px;
-    height: 60px;
-    padding: 15px 20px;
+    width: 18.75vw;
+    height: 3.125vw;
+    padding: 0.78125vw 1.04vw;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    border-radius: 20px;
+    gap: 0.52vw;
+    border-radius: 1.04vw;
     border: 1px solid rgba(20, 65, 223, 0.25);
     background: #325EB4;
     color: #D9D9D9;
     text-align: center;
     font-family: Onest, sans-serif;
-    font-size: 20px;
+    font-size: 1.04vw;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    margin-top: 15px;
+    margin-top: 0.78vw;
     cursor: pointer;
 }
 
 .loginButtonLoading {
     display: flex;
-    width: 360px;
-    height: 60px;
-    padding: 15px 20px;
+    width: 18.75vw;
+    height: 3.125vw;
+    padding: 0.78125vw 1.04vw;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    border-radius: 20px;
+    gap: 0.52vw;
+    border-radius: 1.04vw;
     border: 1px solid rgba(20, 65, 223, 0.25);
     background: #325EB4;
     color: #D9D9D9;
     text-align: center;
     font-family: Onest, sans-serif;
-    font-size: 20px;
+    font-size: 1.04vw;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    margin-top: 15px;
+    margin-top: 0.78vw;
     cursor: pointer;
 
 }
 
 .activateButtonLoading {
     width: 100%;
-    height: 50px;
-    padding-right: 33px;
-    padding-top: 5px;
+    height: 2.6vw;
+    padding-right: 1.71875vw;
+    padding-top: 0.26vw;
 }
 
 /*.secondButton {*/
@@ -294,10 +295,10 @@ input::placeholder {
 
 .authForm h3 {
     font-family: Nunito, sans-serif;
-    font-size: 18px;
+    font-size: 0.9375vw;
     color: #8a8a8d;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 1.04vw;
     margin-bottom: 0;
 }
 
@@ -306,7 +307,7 @@ input::placeholder {
     justify-content: center;
     color: #D9D9D9;
     font-family: Onest, sans-serif;
-    font-size: 16px;
+    font-size: 0.83vw;
     font-style: normal;
     font-weight: 400;
     line-height: 145%; /* 23.2px */
@@ -316,27 +317,27 @@ input::placeholder {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 0.52vw;
 
 }
 
 .social a {
     display: flex;
-    gap: 10px;
-    width: 138px;
-    height: 50px;
-
+    gap: 0.52vw;
+    width: 7.1875vw;
+    height: 2.6vw;
+    font-size: 0.9375vw;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 1.04vw;
     background: transparent;
     border: 1px solid rgba(233, 233, 233, 0.05);
 
 }
 
 .social a img {
-    width: 28px;
+    width: 1.458vw;
 
 }
 
@@ -344,7 +345,7 @@ input::placeholder {
     position: relative;
     top: -5px;
     color: #ff4d4f;
-    font-size: 14px;
+    font-size: 0.729vw;
     align-self: flex-start;
     margin: 10px 0 0 5px;
     display: none;
@@ -354,7 +355,7 @@ input::placeholder {
 .instructions {
     position: relative;
     color: #ff4d4f;
-    font-size: 14px;
+    font-size: 0.729vw;
     align-self: flex-start;
     margin: 9px 0 0 5px;
     display: inline-block;
@@ -362,11 +363,11 @@ input::placeholder {
 }
 
 .policy p {
-    width: 350px;
+    width: 18.2vw;
     margin: 0 auto;
     color: rgba(255, 255, 255, 0.50);
     font-family: Onest, sans-serif;
-    font-size: 16px;
+    font-size: 0.83vw;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -386,7 +387,7 @@ input::placeholder {
 .forgotBtn {
     color: #79A1DD;
     font-family: Onest, sans-serif;
-    font-size: 16px;
+    font-size: 0.83vw;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -397,7 +398,7 @@ input::placeholder {
     justify-content: center;
     color: #D9D9D9;
     font-family: Onest, sans-serif;
-    font-size: 16px;
+    font-size: 0.83vw;
     font-style: normal;
     font-weight: 400;
     line-height: 145%; /* 23.2px */
@@ -406,6 +407,7 @@ input::placeholder {
 
 .redirectButton {
     color: #79A1DD;
+    font-size: 0.9375vw;
 }
 
 @media screen and (max-width: 480px) {
@@ -455,7 +457,10 @@ input::placeholder {
 .langForm {
 
 }
-
+.name img{
+    width: 13.17vw;
+    height: 2.239vw;
+}
 @media screen and (max-width: 346px) {
     .langForm img {
         width: 50px;
