--- a/client/src/components/Auth/CompleteRegistration/FormComponent/FormComponent.module.css
+++ b/client/src/components/Auth/CompleteRegistration/FormComponent/FormComponent.module.css
@@ -15,8 +15,11 @@
 
 .resultUsername {
     position: absolute;
-    top: -0.885vw;
-    right: 0.78125vw;
+    /*top: -0.885vw;*/
+    /*right: 0.78125vw;*/
+    top: 50%;
+    right: -15%;
+    transform: translate(-50%, -50%);
 }
 
 .userCheckBlock {
@@ -24,6 +27,10 @@
     justify-content: center;
     align-items: center;
     gap: 0.88vw;
+}
+.userCheckBlock img{
+    width: 1.6vw;
+    height: 1.6vw;
 }
 
 .taken {
@@ -113,6 +120,8 @@
 .genderButton input[type="radio"]:checked {
     content: url('../../../../../public/settings/check.svg');
     background: #AAFFAD;
+    width: 1.6vw;
+    height: 1.6vw;
 }
 
 .active {
