--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -12,6 +12,11 @@
     font-size: 3.7vw;
 }
 
+.logo img {
+    /*width: 3.333vw;*/
+    height: 2.5vw;
+}
+
 ul {
     list-style: none;
     margin: 0;
@@ -51,7 +56,6 @@ a {
 }
 
 .lang {
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,6 +63,10 @@ a {
     border: 1px solid rgba(233, 233, 233, 0.05);
     height: 2.8vw;
     width: 3.3vw;
+    margin: 0;
+    cursor: pointer;
+    background: transparent;
+    text-transform: uppercase;
 
 
     color: #FFF;
@@ -215,7 +223,8 @@ a {
     transform-origin: center;
     border-radius: 5px;
 }
-.currencyContainer{
+
+.currencyContainer {
     display: flex;
     align-items: center;
     height: 2.1875rem;
@@ -226,6 +235,7 @@ a {
     background: rgba(106, 106, 118, 0.12);
     backdrop-filter: blur(10px);
 }
+
 .currency {
     margin-left: 4px;
     margin-right: 2px;
@@ -320,14 +330,16 @@ a {
         display: none;
     }
 
-    .logo{
+    .logo {
         font-size: 2.8rem;
     }
 }
+
 @media (max-width: 1000px) {
     .menuButtonsLeft {
         display: none;
     }
+
     .searchIcon {
         display: flex;
         align-items: center;
@@ -342,17 +354,71 @@ a {
     .menuButtonsLeft {
         display: flex;
     }
+
     .searchIcon {
         display: none;
     }
 }
 
-.burgerIcon{
+.burgerIcon {
     display: none;
 }
 
+.dropdownLang {
+    position: relative;
+
+}
+
+.dropdownLangMenu {
+    position: absolute;
+
+    height: 10.46875vw;
+    border-radius: 1.04vw;
+    background: #030304;
+    backdrop-filter: blur(12px);
+    z-index: 1;
+    margin: 0;
+    right: 30%;
+    top: 115%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 9.16vw;
+
+    font-family: Onest, sans-serif;
+    /*font-size: 1.125rem;*/
+    font-size: 0.9375vw;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+
+}
+
+.dropdownLangMenu li {
+    margin: 0;
+    width: 100%;
+}
+.dropdownLangMenu li:first-child {
+    margin-top: 0.729vw;
+}
+
+.dropdownLangMenu li a {
+    text-decoration: none;
+    display: flex;
+    color: #D9D9D9;
+    padding: 0.833vw;
+    font-size: 0.9375vw;
+    gap:0.52vw;
+
+}
+
+.dropdownLangMenu li:hover {
+    background: rgba(106, 106, 118, 0.12);
+}
+
 @media (max-width: 1000px) {
-    .burgerIcon{
+    .burgerIcon {
         display: inline-flex;
         padding: 1rem;
         justify-content: center;
