small fix nav, search and card

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,8 +25,12 @@ code {
     monospace;
 }
 
-body::-webkit-scrollbar {
-  width: 11px;               /* ширина всей полосы прокрутки */
+/*body::-webkit-scrollbar {*/
+/*  width: 11px;               !* ширина всей полосы прокрутки *!*/
+/*}*/
+::-webkit-scrollbar { /* chrome based */
+  width: 0;  /* ширина scrollbar'a */
+  background: transparent;  /* опционально */
 }
 
 body::-webkit-scrollbar-track {
