--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -103,6 +103,8 @@ a {
     font-style: normal;
     font-weight: 400;
     line-height: 135%;
+    background: transparent;
+    cursor: pointer;
 }
 
 .search img {
