--- a/client/src/components/SearchModal/SearchItem/SearchItem.module.css
+++ b/client/src/components/SearchModal/SearchItem/SearchItem.module.css
@@ -1,9 +1,18 @@
 .card {
-
     border-radius: 1.125rem;
-    box-shadow: 0 7px 10px 0 rgba(0, 0, 0, 0.45);
     position: relative;
+    /*margin: 0.416vw;*/
+    transition: 0.3s all ease;
+    padding-left: 1.04vw;
+    padding-top: 0.416vw;
+    padding-bottom: 0.416vw;
+    display: flex;
+}
 
+.card:hover {
+    background-color: #101012;
+    transition: 0.3s all ease;
+    cursor: pointer;
 }
 
 .cardImg {
@@ -30,9 +39,9 @@
     align-items: center;
     top: 0;
     right: 0;
-    /*margin-top: 0.88rem;*/
     margin-right: 1.12rem;
     gap: 0.25rem;
+    transform: translate(0%, 25%);
 }
 
 .matchPerc {
@@ -48,21 +57,42 @@
     margin-top: 3px;
 
 }
-.matchPerc img{
+
+.matchPerc img {
     width: 1.15vw;
 }
 
+.names {
+    height: 100%;
+
+    padding-left: 0.625vw;
+    display: flex;
+    flex-direction: column;
+    gap: 0.4vw;
+}
+
 .name {
-    color: #FFF;
-    text-align: center;
-    font-family: Montserrat, sans-serif;
-    font-size: 0.9375vw !important;
+
     font-style: normal;
-    font-weight: 600;
-    line-height: 145%;
     text-transform: capitalize;
     margin: 0;
+
+    color: #D9D9D9;
+    font-family: Onest, sans-serif;
+    font-size: 0.9375vw;
+    font-weight: 400;
 }
+
+.tag {
+    text-align: center;
+    font-style: normal;
+    margin: 0;
+    color: #818182;
+    font-family: Onest, sans-serif;
+    font-size: 0.83vw;
+    font-weight: 400;
+}
+
 
 .percNumber {
     color: #D9D9D9;
@@ -110,6 +140,7 @@
     flex-shrink: 0;
 
 }
-.verified{
+
+.verified {
     width: 1.5625vw;
 }
